[build-system]
requires = ["flit_core>=3.4"]
build-backend = "flit_core.buildapi"

[project]
name = "quickdriver"
version = "3.0.1"
dependencies = [
    "selenium >= 4.27.1",
]
requires-python = ">=3.8"
authors = [
    {name = "nishizawatakamasa", email = "nszw0502@gmail.com"}
]
description = "A wrapper for Selenium WebDriver that simplifies browser automation."
readme = "README.md"
license = "MIT"
keywords = [
    "selenium"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.urls]
repository = "https://github.com/nishizawatakamasa/quickdriver"
